# tag_man

./: CMakeLists.txt  package.xml
config/: gains.yaml  hires.yaml  mav_manager_params.yaml  tag_swarm_params.yaml  tracker_params.yaml  trackers.yaml
include/tag_swarm/: tag_manager.h
launch/: dfc_tag_detect.launch  hires_tag_detect.launch  quad_control.launch  tag_swarm.launch  temp.launch  test_bag.launch
scripts/: tag_search.py  tmux_tag.sh
src/: tag_manager.cpp  tag_search.cpp
