<?xml version="1.0"?>
<package format="2">
  <name>tag_swarm</name>
  <version>0.0.0</version>
  <description>The tag_swarm package</description>

  <maintainer email="aarow@todo.todo">aarow</maintainer>

  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>actionlib</depend>
  <depend>kr_mav_msgs</depend>
  <depend>kr_mav_manager</depend>
  <depend>kr_tracker_msgs</depend>
  <depend>apriltag_msgs</depend>
  <depend>tf2_ros</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
